--- a/Views/CoachManager/CreateCoach.cshtml
+++ b/Views/CoachManager/CreateCoach.cshtml
@@ -278,7 +278,7 @@
 									<div class="mb-3 col-lg-6">
 										<label class="form-label">Coach No</label>
 										<span style="color:red">*</span>
-										<input asp-for="CoachNo" class="form-control" placeholder="Coach No" />
+										<input asp-for="CoachNo" class="form-control" placeholder="Coach No (must be number)" />
 										<span asp-validation-for="CoachNo" class="text-danger"></span>
 									</div>
 									<div class="mb-3 col-lg-6">
