--- a/Views/TransactionManager/TransactionManager.cshtml
+++ b/Views/TransactionManager/TransactionManager.cshtml
@@ -262,7 +262,7 @@
 					<!-- page header -->
 					<div class="d-md-flex justify-content-between align-items-center">
 						<div>
-							<h2>Booking List</h2>
+							<h2>Transaction List</h2>
 							<!-- breacrumb -->
 							<nav aria-label="breadcrumb">
 								<ol class="breadcrumb mb-0">
@@ -305,6 +305,7 @@
 											<th class="colerth">Sender</th>
 											<th class="colerth">Receiver</th>
 											<th class="colerth">Amount</th>
+											<th class="colerth">IsDone</th>
 											<th class="colerth">Create At</th>
 											<th class="colerth">Booking Id</th>
 											<th class="colerth">Cancelling Id</th>
@@ -323,6 +324,7 @@
 												<td>@item.Sender</td>
 												<td>@item.Receiver</td>
 												<td>@item.Amount</td>
+												<td>@item.IsDone</td>
 												<td>@item.CreatedAt</td>
 												<td>@item.Booking.Id</td>
 												<td>
