--- a/Views/RouteDetail/CreateRouteDetail.cshtml
+++ b/Views/RouteDetail/CreateRouteDetail.cshtml
@@ -343,7 +343,17 @@
 									</div>
 								</div>
 							</form>
+							@if (!ViewData.ModelState.IsValid)
+							{
+								<div class="alert alert-danger" role="alert">
+									@foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
+									{
+										<span>@error.ErrorMessage</span>
 
+										<br />
+									}
+								</div>
+							}
 						</div>
 					</div>
 				</div>
