--- a/Views/TrainMaster/TrainMaster.cshtml
+++ b/Views/TrainMaster/TrainMaster.cshtml
@@ -351,11 +351,11 @@
 												<td>
 													@if(@item.IsRunning == true)
 													{
-														<span class="badge bg-light-primary text-dark-primary">Active</span>
+														<span class="badge bg-light-primary text-dark-primary">Running</span>
 													}
 													else
 													{
-														<span class="badge bg-light-danger text-dark-primary">Un Active</span>
+														<span class="badge bg-light-danger text-dark-danger">Stop</span>
 													}
 												</td>
 												<td>@item.TypeCode</td>
