--- a/Views/ScheduleMaster/DetailDate.cshtml
+++ b/Views/ScheduleMaster/DetailDate.cshtml
@@ -368,7 +368,7 @@
                                                         @item.Id
                                                     </td>
                                                     <td>@item.Train.Code</td>
-                                                    <td>@item.Route.Id</td>
+                                                    <td>@item.Route.Id (@item.Route.StartStation.Name to @item.Route.EndStation.Name)</td>
                                                     <td>@item.Departure</td>
                                                     <td>@item.Arrival</td>
                                                     <td>
@@ -381,11 +381,7 @@
                                                             <span class="badge bg-light-danger text-dark-danger">Unfinished</span>
                                                         }
                                                     </td>
-                                                    <td>
-                                                        <a href="/Schedule/TrainScheduleDetail" class="text-reset" data-bs-toggle="dropdown" aria-expanded="false">
-                                                            <i class="fa-solid fa-circle-info"></i>
-                                                        </a>
-                                                    </td>
+
 
                                                 </tr>
                                             }
