--- a/Views/StationMaster/EditStation.cshtml
+++ b/Views/StationMaster/EditStation.cshtml
@@ -281,24 +281,29 @@
 										<div class="mb-3 col-lg-6">
 											<label class="form-label">Station Code</label>
 											<input asp-for="Code" class="form-control" placeholder="Code" />
+											<span asp-validation-for="Code" style="color:red"></span>
 										</div>
 
 										<!-- input -->
 										<div class="mb-3 col-lg-6">
 											<label class="form-label">Station Name</label>
 											<input asp-for="Name" class="form-control" placeholder="Name" />
+											<span asp-validation-for="Name" style="color:red"></span>
 										</div>
 										<div class="mb-3 col-lg-6">
 											<label class="form-label">Name Of Division</label>
 											<input asp-for="NameOfDivision" class="form-control" placeholder="NameOfDivision" />
+											<span asp-validation-for="NameOfDivision" style="color:red"></span>
 										</div>
 										<div class="mb-3 col-lg-6">
 											<label class="form-label">Zone</label>
 											<input asp-for="Zone" class="form-control" placeholder="Zone" />
+											<span asp-validation-for="Zone" style="color:red"></span>
 										</div>
 										<div class="mb-3 col-lg-6">
 											<label class="form-label">ZipCode</label>
 											<input asp-for="ZipCode" class="form-control" placeholder="Zipcode" />
+											<span asp-validation-for="ZipCode" style="color:red"></span>
 										</div>
 									</div>
 
