--- a/Views/Route/CreateRoute.cshtml
+++ b/Views/Route/CreateRoute.cshtml
@@ -273,6 +273,7 @@
 						<!-- card body -->
 						<div class="card-body p-6">
 							<h4 class="mb-4 h5 mt-5">Route Information</h4>
+
 							<form asp-action="CreateRoute" method="post">
 								<div class="row">
 									<!-- input -->
@@ -314,7 +315,7 @@
 									<!-- input -->
 
 									<div class="col-lg-12">
-										<input type="submit" class="btn btn-me" value="Create Edit" />
+										<input type="submit" class="btn btn-me" value="Create Route" />
 									</div>
 								</div>
 							</form>
