--- a/Views/Route/EditRoute.cshtml
+++ b/Views/Route/EditRoute.cshtml
@@ -277,8 +277,8 @@
 								<div class="row">
 									<!-- input -->
 									<div class="mb-3 col-lg-6">
-										<label class="form-label">Train</label>
-										<select class="form-select" asp-for="StartStation.Id">
+										<label class="form-label">StartStation</label>
+										<select class="form-select" asp-for="StartStationId">
 											@if (list != null)
 											{
 												@foreach (var station in list)
@@ -287,11 +287,12 @@
 												}
 											}
 										</select>
+										
 									</div>
 									<!-- input -->
 									<div class="mb-3 col-lg-6">
-										<label class="form-label">Route</label>
-										<select class="form-select" asp-for="EndStation.Id">
+										<label class="form-label">EndStation</label>
+										<select class="form-select" asp-for="EndStationId">
 											@if (list != null)
 											{
 												@foreach (var station in list)
@@ -300,12 +301,13 @@
 												}
 											}
 										</select>
+										
 									</div>
 									<!-- input -->
 									<div class="mb-3 col-lg-6">
 										<label class="form-label">Distance</label>
 										<input asp-for="Distance" class="form-control" required />
-										<span asp-validation-for="Distance" class="text-danger"></span>
+										
 									</div>
 
 									<div></div>
@@ -317,7 +319,16 @@
 									</div>
 								</div>
 							</form>
-
+							@if (!ViewData.ModelState.IsValid)
+							{
+								<div class="alert alert-danger" role="alert">
+									@foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
+									{
+										<span>@error.ErrorMessage</span>
+										<br />
+									}
+								</div>
+							}
 						</div>
 					</div>
 				</div>
