--- a/Views/ScheduleMaster/DetailDate.cshtml
+++ b/Views/ScheduleMaster/DetailDate.cshtml
@@ -294,7 +294,6 @@
                                 <table class="table table-centered table-hover text-nowrap table-borderless mb-0 table-with-checkbox">
                                     <thead class="bg-light">
                                         <tr>
-                                            <th class="colerth">No</th>
                                             <th class="colerth">Train Code</th>
                                             <th class="colerth">Route Id</th>
                                             <th class="colerth">Departure</th>
@@ -309,9 +308,6 @@
                                             @if(item.IsFinished == false)
                                             {
                                                 <tr>
-                                                    <td>
-                                                        @item.Id
-                                                    </td>
                                                     <td>@item.Train.Code</td>
                                                     <td>@item.Route.Id (@item.Route.StartStation.Name to @item.Route.EndStation.Name)</td>
                                                     <td>@item.Departure</td>
@@ -338,35 +334,39 @@
                                                             </div>
                                                         }
                                                     </td>
-                                                    <td>
-                                                        <div class="dropdown">
-                                                            <a href="#" class="text-reset" data-bs-toggle="dropdown" aria-expanded="false">
-                                                                <i class="bi bi-three-dots-vertical"></i>
-                                                            </a>
-                                                            <ul class="dropdown-menu">
-                                                                <form asp-action="DeleteTrainSchedule" asp-route-id="@item.Id" onsubmit="return confirmDelete()">
-                                                                    <button class="dropdown-item" type="submit">
-                                                                        <i class="bi bi-trash me-3"></i>
-                                                                        Delete
-                                                                    </button>
-                                                                </form>
-                                                                <li>
-                                                                    <a class="dropdown-item" href="@Url.Action("EditTrainSchedule", new {id = item.Id})">
-                                                                        <i class="bi bi-pencil-square me-3"></i>
-                                                                        Edit
-                                                                    </a>
-                                                                </li>
-                                                            </ul>
-                                                        </div>
-                                                    </td>
+                                                    @if(item.Arrival < DateTime.Now)
+                                                    {
+                                                       <td>Null</td>
+                                                    }
+                                                    else
+                                                    {
+                                                         <td>
+                                                            <div class="dropdown">
+                                                                <a href="#" class="text-reset" data-bs-toggle="dropdown" aria-expanded="false">
+                                                                    <i class="bi bi-three-dots-vertical"></i>
+                                                                </a>
+                                                                <ul class="dropdown-menu">
+                                                                    @*  <form asp-action="DeleteTrainSchedule" asp-route-id="@item.Id" onsubmit="return confirmDelete()">
+                                                        <button class="dropdown-item" type="submit">
+                                                        <i class="bi bi-trash me-3"></i>
+                                                        Delete
+                                                        </button>
+                                                        </form> *@
+                                                                    <li>
+                                                                        <a class="dropdown-item" href="@Url.Action("EditTrainSchedule", new {id = item.Id})">
+                                                                            <i class="bi bi-pencil-square me-3"></i>
+                                                                            Edit
+                                                                        </a>
+                                                                    </li>
+                                                                </ul>
+                                                            </div>
+                                                        </td>
+                                                    }
                                                 </tr>
                                             }
                                             else
                                             {
                                                 <tr>
-                                                    <td>
-                                                        @item.Id
-                                                    </td>
                                                     <td>@item.Train.Code</td>
                                                     <td>@item.Route.Id (@item.Route.StartStation.Name to @item.Route.EndStation.Name)</td>
                                                     <td>@item.Departure</td>
