--- a/Views/ScheduleMaster/EditTrainSchedule.cshtml
+++ b/Views/ScheduleMaster/EditTrainSchedule.cshtml
@@ -2,6 +2,8 @@
 @{
 	Layout = null;
 	var listRoute = ViewData["listroute"] as List<Railway_Group01.Data.Route>;
+	var listTrain = ViewData["listTrain"] as List<Railway_Group01.Data.Train>;
+
 }
 
 <!-- Required meta tags -->
@@ -274,47 +276,58 @@
 							<h4 class="mb-4 h5 mt-5">Train Schedule Information</h4>
 							<form asp-action="EditTrainSchedule" method="post">
 								<div class="row">
-									<input type="hidden" asp-for="Id"/>
+									<div class="mb-3 col-lg-6">
+										<label class="form-label">Name Trains</label>
+										<span style="color:red">*</span>
+										<input asp-for="Name" class="form-control" placeholder="Name Train" />
+										<span asp-validation-for="Name" class="text-danger"></span>
+									</div>
 									<!-- input -->
 									<div class="mb-3 col-lg-6">
-										<label class="form-label">Train Code</label>
-										<select asp-for="Train.Code" class="form-select" asp-items="@ViewBag.listTrain">
-																			
+										<label class="form-label">Train</label>
+										<select class="form-select" asp-for="TrainCode">
+											@if (listRoute != null)
+											{
+												@foreach (var train in listTrain)
+												{
+													<option value="@train.Code">@train.Code</option>
+												}
+											}
 										</select>
 									</div>
 									<!-- input -->
 									<div class="mb-3 col-lg-6">
-										<label class="form-label">Route Id</label>
-											<select class="form-select" asp-for="Route.Id">
-												@if (listRoute != null)
+										<label class="form-label">Route</label>
+										<select class="form-select" asp-for="RouteId">
+											@if (listRoute != null)
+											{
+												@foreach (var route in listRoute)
 												{
-													@foreach (var route in listRoute)
-													{
-														<option value="@route.Id">@route.StartStation.Code to @route.EndStation.Code (@route.Id)</option>
-													}
+													<option value="@route.Id">@route.StartStation.Code to @route.EndStation.Code (@route.Id)</option>
 												}
-											</select>
+											}
+										</select>
 									</div>
 									<!-- input -->
 									<div class="mb-3 col-lg-6">
 										<label class="form-label">Start At</label>
-										<input asp-for="Departure" class="form-control"  />
+										<span style="color:red">*</span>
+										<input asp-for="Departure" class="form-control" />
+										<span asp-validation-for="Departure" class="text-danger"></span>
 									</div>
 									<div class="mb-3 col-lg-6">
 										<label class="form-label">End At</label>
-										<input asp-for=Arrival class="form-control flatpickr"  />
+										<span style="color:red">*</span>
+										<input asp-for="Arrival" class="form-control flatpickr" />
+										<span asp-validation-for="Arrival" class="text-danger"></span>
 									</div>
 
 									<div></div>
 									<!-- input -->
 									<!-- input -->
-									<div class="mb-3 col-lg-12" style="display:none;">
+									<div class="mb-3 col-lg-12">
 										<label class="form-label" id="productSKU">Status</label>
 										<br />
-										<div class="form-check form-check-inline">
-											<input class="form-check-input" type="radio" asp-for="IsFinished" value="True"  />
-											<label class="form-check-label" for="inlineRadio1">Finished</label>
-										</div>
 										<!-- input -->
 										<div class="form-check form-check-inline">
 											<input class="form-check-input" type="radio" asp-for="IsFinished" value="False" checked />
@@ -328,7 +341,17 @@
 									</div>
 								</div>
 							</form>
+							@if (!ViewData.ModelState.IsValid)
+							{
+								<div class="alert alert-danger" role="alert">
+									@foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
+									{
+										<span>@error.ErrorMessage</span>
 
+										<br />
+									}
+								</div>
+							}
 						</div>
 					</div>
 				</div>
