--- a/Views/DashBoard/DashBoard.cshtml
+++ b/Views/DashBoard/DashBoard.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
 	Layout = null;
+
 }
 <!-- Required meta tags -->
 <meta charset="utf-8">
@@ -267,8 +268,7 @@
 								</div>
 								<!-- project number -->
 								<div class="lh-1">
-									<h1 class="mb-2 fw-bold fs-2">$93,438.78</h1>
-									<span>Monthly revenue</span>
+									<h1 class="mb-2 fw-bold fs-2">Đ@ViewBag.TotalAmount.ToString("N2")</h1>
 								</div>
 							</div>
 						</div>
@@ -281,7 +281,7 @@
 								<!-- heading -->
 								<div class="d-flex justify-content-between align-items-center mb-6">
 									<div>
-										<h4 class="mb-0 fs-5">Orders</h4>
+										<h4 class="mb-0 fs-5">Transaction</h4>
 									</div>
 									<div class="icon-shape icon-md bg-light-warning text-dark-warning rounded-circle">
 										<i class="bi bi-cart fs-5"></i>
@@ -289,11 +289,7 @@
 								</div>
 								<!-- project number -->
 								<div class="lh-1">
-									<h1 class="mb-2 fw-bold fs-2">42,339</h1>
-									<span>
-										<span class="text-dark me-1">35+</span>
-										New Sales
-									</span>
+									<h1 class="mb-2 fw-bold fs-2">@ViewBag.TotalTransactionCount</h1>
 								</div>
 							</div>
 						</div>
@@ -306,7 +302,7 @@
 								<!-- heading -->
 								<div class="d-flex justify-content-between align-items-center mb-6">
 									<div>
-										<h4 class="mb-0 fs-5">Customer</h4>
+										<h4 class="mb-0 fs-5">User</h4>
 									</div>
 									<div class="icon-shape icon-md bg-light-info text-dark-info rounded-circle">
 										<i class="bi bi-people fs-5"></i>
@@ -314,11 +310,7 @@
 								</div>
 								<!-- project number -->
 								<div class="lh-1">
-									<h1 class="mb-2 fw-bold fs-2">39,354</h1>
-									<span>
-										<span class="text-dark me-1">30+</span>
-										new in 2 days
-									</span>
+									<h1 class="mb-2 fw-bold fs-2">@ViewBag.TotalUserCount</h1>
 								</div>
 							</div>
 						</div>
