--- a/Views/DashBoard/DashBoard.cshtml
+++ b/Views/DashBoard/DashBoard.cshtml
@@ -268,7 +268,7 @@
 								</div>
 								<!-- project number -->
 								<div class="lh-1">
-									<h1 class="mb-2 fw-bold fs-2">Đ@ViewBag.TotalAmount.ToString("N2")</h1>
+									<h1 class="mb-2 fw-bold fs-2">@ViewBag.TotalAmount.ToString("N2")Đ</h1>
 								</div>
 							</div>
 						</div>
