--- a/Views/ScheduleMaster/DetailDate.cshtml
+++ b/Views/ScheduleMaster/DetailDate.cshtml
@@ -334,7 +334,7 @@
                                                             </div>
                                                         }
                                                     </td>
-                                                    @if(item.Arrival < DateTime.Now)
+                                                    @if(item.Departure < DateTime.Now)
                                                     {
                                                        <td>Null</td>
                                                     }
