--- a/Views/TrainMaster/CreateTrain.cshtml
+++ b/Views/TrainMaster/CreateTrain.cshtml
@@ -301,8 +301,8 @@
 									<div class="mb-3 col-lg-6">
 										<label class="form-label">IsRunning</label>
 										<select asp-for="IsRunning" class="form-select">
-											<option value="True">Stop</option>
-											<option value="False">Running</option>
+											<option value="True">Active</option>
+											<option value="False">Stop</option>
 										</select>
 									</div>
 
