--- a/Views/TrainMaster/TrainMaster.cshtml
+++ b/Views/TrainMaster/TrainMaster.cshtml
@@ -351,7 +351,7 @@
 												<td>
 													@if(@item.IsRunning == true)
 													{
-														<span class="badge bg-light-primary text-dark-primary">Running</span>
+														<span class="badge bg-light-primary text-dark-primary">Active</span>
 													}
 													else
 													{
